@@ -15,6 +15,7 @@ using MonoDevelop.Gui.Dialogs;
 using MonoDevelop.Core.Services;
 using MonoDevelop.Core.Properties;
 using MonoDevelop.Core.AddIns.Codons;
+using MonoDevelop.Internal.Parser;
 
 using Gtk;
 using MonoDevelop.Gui.Widgets;
@@ -32,7 +33,7 @@ namespace CSharpBinding
 			// Gtk Controls	
 			//
  			[Glade.Widget] Entry symbolsEntry;
- 			[Glade.Widget] Entry mainClassEntry;
+ 			[Glade.Widget] ComboBoxEntry mainClassEntry;
 			[Glade.Widget] ComboBox compileTargetCombo;
  			[Glade.Widget] CheckButton generateOverflowChecksCheckButton;
 			[Glade.Widget] CheckButton allowUnsafeCodeCheckButton;
@@ -42,12 +43,16 @@ namespace CSharpBinding
  			[Glade.Widget] CheckButton generateXmlOutputCheckButton;
  			[Glade.Widget] SpinButton warningLevelSpinButton;
 
+			Project project;
 			DotNetProjectConfiguration configuration;
 			CSharpCompilerParameters compilerParameters = null;
+			ListStore classListStore;
+			bool classListFilled;
 
  			public  CodeGenerationPanelWidget(IProperties CustomizationObject) : base ("CSharp.glade", "CodeGenerationPanel")
  			{	
 				configuration = (DotNetProjectConfiguration)((IProperties)CustomizationObject).GetProperty("Config");
+				project = (Project)((IProperties)CustomizationObject).GetProperty("Project");
 				compilerParameters = (CSharpCompilerParameters) configuration.CompilationParameters;
 				
 				ListStore store = new ListStore (typeof (string));
@@ -58,10 +63,17 @@ namespace CSharpBinding
 				compileTargetCombo.PackStart (cr, true);
 				compileTargetCombo.AddAttribute (cr, "text", 0);
 				compileTargetCombo.Active = (int) configuration.CompileTarget;
+				compileTargetCombo.Changed += new EventHandler (OnTargetChanged);
 
 				symbolsEntry.Text = compilerParameters.DefineSymbols;
-				mainClassEntry.Text = compilerParameters.MainClass;
+				
+				classListStore = new ListStore (typeof(string));
+				mainClassEntry.Model = classListStore;
+				mainClassEntry.TextColumn = 0;
+				((Entry)mainClassEntry.Child).Text = compilerParameters.MainClass;
 
+				UpdateTarget ();
+				
 				generateDebugInformationCheckButton.Active = configuration.DebugMode;
 				generateXmlOutputCheckButton.Active        = compilerParameters.GenerateXmlDocumentation;
 				enableOptimizationCheckButton.Active       = compilerParameters.Optimize;
@@ -70,6 +82,36 @@ namespace CSharpBinding
 				warningsAsErrorsCheckButton.Active         = ! configuration.RunWithWarnings;
 				warningLevelSpinButton.Value               = compilerParameters.WarningLevel;				
  			}
+			
+			void FillClasses ()
+			{
+				foreach (IClass c in Runtime.ParserService.GetProjectContents (project)) {
+					if (c.Methods != null) {
+						foreach (IMethod m in c.Methods) {
+							if (m.IsStatic && m.Name == "Main")
+								classListStore.AppendValues (c.FullyQualifiedName);
+						}
+					}
+				}
+			}
+			
+			void UpdateTarget ()
+			{
+				if ((CompileTarget) compileTargetCombo.Active == CompileTarget.Library) {
+					mainClassEntry.Sensitive = false;
+				} else {
+					mainClassEntry.Sensitive = true;
+					if (!classListFilled) {
+						FillClasses ();
+						classListFilled = true;
+					}
+				}
+			}
+			
+			void OnTargetChanged (object s, EventArgs a)
+			{
+				UpdateTarget ();
+			}
 
 			public bool Store ()
 			{	
@@ -78,7 +120,7 @@ namespace CSharpBinding
 				}
 				configuration.CompileTarget =  (CompileTarget) compileTargetCombo.Active;
 				compilerParameters.DefineSymbols =  symbolsEntry.Text;
-				compilerParameters.MainClass     =  mainClassEntry.Text;
+				compilerParameters.MainClass     =  ((Entry)mainClassEntry.Child).Text;
 
 				configuration.DebugMode                = generateDebugInformationCheckButton.Active;
 				compilerParameters.GenerateXmlDocumentation = generateXmlOutputCheckButton.Active;
